--- a/content/blog/2017-05-27-keeping-exploratory.Rmd
+++ b/content/blog/2017-05-27-keeping-exploratory.Rmd
@@ -27,4 +27,4 @@ One thing I should mention is that there might be a misconception among research
 P.S.
 Uli Schimmack actually beat me to this conclusion, and posted it on the Psych Methods Facebook page...
 
-[^1]: While I don't know the authors of this paper, for full disclosure, I should mention that the senior author of this paper, Alison Ledgerwood, was the editor on a paper of mine for Perspectives on  Psychological Science. She was an outstanding editor - in fact one of the best I have ever worked with. I felt it's important to express this here, because if anything, I am positively biased against her, and I am also not directing my criticism directly at her as a person. 
+[^1]: While I don't know the authors of this paper, for full disclosure, I should mention that the senior author of this paper, Alison Ledgerwood, was the editor on a paper of mine for Perspectives on  Psychological Science. She was a great editor. I felt it's important to express this here, because if anything, I am positively biased against her, and I am also not directing my criticism directly at her as a person. 
