--- a/content/blog/2018-06-18-kelly-criterion.Rmd
+++ b/content/blog/2018-06-18-kelly-criterion.Rmd
@@ -60,12 +60,19 @@ An interesting observation with respect to the World Cup games was that for many
 
 Below I am showing a linegraph that shows how the initial bankroll of $100 developed after each game. The y-axis shows relative bankroll (that means it simply tallies wins and losses). The bars at the bottom of the graph show how much was won or lost in each bet, and the size of the point indicates the amount of total stake that was wagered on each game. As an example, when Sweden and South Korea were playing, the Kelly criterion suggested a somewhat large bet on Sweden, which paid off, as indicated as the big green bar. On the other hand, in the game Brazil vs Switzerland, the Kelly criterion suggest moderate bets on Switzerland, and on a draw. The bet on Switzerland was lost, but the bet on the draw was won, resulting in a net win for this game. 
 
-I will update this blog as the world cup progresses. 
+I will update this blog as the world cup progresses, but at this point, it's fair to say that this particular betting scheme is doing quite well. 
 
 
 ```{r, message=FALSE,warning=FALSE, echo=FALSE}
-wcb <- read_xlsx("C:\\Users\\fjt36\\Dropbox\\WORK\\2018 Winter Cornell\\kellybettingwc.xlsx")
-wcb <- wcb %>% mutate(posneg = factor(ifelse(wcb$`Total net`<0,"negative","positive"))) %>%  select(ID,Title,"Total net","Total stake",Bankrollkellyplot,posneg) %>% slice(1:15)
+library(ggplot2)
+library(viridis)
+library(ggthemes)
+library(readxl)
+library(dplyr)
+library(magrittr)
+
+wcb <- read_xlsx("C:\\Users\\fjt36-admin\\Dropbox\\WORK\\2018 Winter Cornell\\kellybettingwc.xlsx")
+wcb <- wcb %>% mutate(posneg = factor(ifelse(wcb$`Total net`<0,"negative","positive"))) %>%  select(ID,Title,"Total net","Total stake",Bankrollkellyplot,posneg) %>% slice(1:42)
 
 wcb$Title <- reorder(factor(wcb$Title),wcb$ID)
 
