--- a/public/blog/2018-06-18-kelly-criterion.Rmd
+++ b/public/blog/2018-06-18-kelly-criterion.Rmd
@@ -10,7 +10,7 @@ categories: statistics
 
 I enjoyed looking at the probabilistic model of world cup matches over at [fivethirtyeight](https://projects.fivethirtyeight.com/2018-world-cup-predictions/matches/) and was wondering how one would fare in terms of sports betting using the predictions from Nate Silver and Jay Boice. As a disclaimer: I did not bet any money at all, all of the below is purely theoretical.
 
-So here is what I did: for each game, I pulled the winning probabilities from fivethirtyeight and the corresponding odds from online bookmakers. Since bookmakers constantly update their odds (in order to have an edge over bettors), I always pulled both probabilities and odds, the night before the match. With that in hand, I simulated three different betting stratgies, who all start out with \$100. First, a bettor who always chooses the favorite to win, and always bets exactly \$10. The second strategy is a contrarian bettor who always chooses the least likely outcome, which typically means betting on the underdog, but with high odds, and always uses a \$10 bet. Lastly, I will simulate a bettor that looks at all probabilties, and odds, and then uses the [Kelly criterion](https://en.wikipedia.org/wiki/Kelly_criterion) for each bet. 
+So here is what I did: for each game, I pulled the winning probabilities from fivethirtyeight and the corresponding odds from online bookmakers. Since bookmakers constantly update their odds (in order to have an edge over bettors), I always pulled both probabilities and odds, the night before the match. With that in hand, I simulated three different betting stratgies, who all start out with a \$100 bankroll. First, a bettor who always chooses the favorite to win, and always bets exactly \$10. The second strategy is a contrarian bettor who always chooses the least likely outcome, which typically means betting on the underdog, but with high odds, and always uses a \$10 bet. Lastly, I will simulate a bettor that looks at all probabilties, and odds, and then uses the [Kelly criterion](https://en.wikipedia.org/wiki/Kelly_criterion) for each bet. 
 
 The Kelly criterion is a method to determine how much one should wager on a bet, given assumed winning probabilities, and offered odds. Kelly betting maximizes logarithmic utility. Below is a graphic display showing the Kelly criterion. On the x-axis are the probabilities that you assume an event is going to take place, and on the y-axis are the offered odds (these odds can be translated into implied probabilities of the bookie). The shading for each part of the graph shows what percentage of your current bankroll you should bet. As an example, if you believe the probability of an event to happen is close to 100% (right side of the graph), then you typically end up betting a lot (or all) of your bankroll (the yellow region of the graph). For events in which the implied probabilities of the bookie are larger than your own, you end up not betting at all - notice that this area is quite large in the graph. 
 
@@ -82,7 +82,7 @@ wcb2$Title <- reorder(factor(wcb2$Title),wcb2$ID)
 #max betting
 ggplot(wcb2,aes(x=Title,y=Bankrollbetmaxplot-100)) + geom_point() + geom_line(group=1) + theme(axis.text.x = element_text(angle=45,margin=margin(t=0,r=0,b=0,l=0),hjust=1)) +  geom_bar(data=wcb2,aes(x=Title,y=Betmaxnet,fill=posneg),stat="identity",alpha=.2,width=.2) + scale_fill_manual(values=c("negative"="firebrick","positive"="darkgreen")) + ylab("Relative bankroll") +theme(axis.title.x=element_blank()) + guides(fill=FALSE,size=FALSE) + coord_cartesian(ylim=c(-100,200))
 ```
-We can see that basically two things happen: either the bettor loses the intial stake (which is always \$10), or wins a modest amount (since odds for favorites are tpyically not very high). After the group stage this bettor still has managed to accumulate winnings of about \$50. 
+We can see that basically two things happen: either the bettor loses the intial stake (which is always \$10), or wins a modest amount (since odds for favorites are tpyically not very high). After the group stage this bettor still has managed to accumulate some winnings.
 
 Comparing this with the contrarian bettor, we see a very different picture. This bettor is almost always losing the intital stake, and rarley wins. However the wins tend to be big. The largest gain was realized in the upset of South Korea over Germany. Without that single game, this bettor may be very close to bankruptcy already. 
 
@@ -129,7 +129,7 @@ wcb$Title <- reorder(factor(wcb$Title),wcb$ID)
 ggplot(wcb,aes(x=Title,y=Bankrollkellyplot-100)) + geom_point(aes(size=`Total stake`)) + geom_line(group=1) + theme(axis.text.x = element_text(angle=45,margin=margin(t=0,r=0,b=0,l=0),hjust=1)) +  geom_bar(data=wcb,aes(x=Title,y=`Total net`,fill=posneg),stat="identity",alpha=.2,width=.2) + scale_fill_manual(values=c("negative"="firebrick","positive"="darkgreen")) + ylab("Relative bankroll") +theme(axis.title.x=element_blank()) + guides(fill=FALSE,size=FALSE) + coord_cartesian(ylim=c(-100,200))
 ```
 
-The Kelly bettor realized the largest winnings from all three strategies by a wide margin. At the end of the group stage, the Kelly bettor accumulated about \$150 of winnnings, meaning a current bankroll of about \$250, starting with an intial bankroll of \$100. It will be intersting to see how this developed in the knock-out stage. 
+The Kelly bettor realized the largest winnings from all three strategies by a wide margin. At the end of the group stage, the Kelly bettor accumulated about \$150 of winnnings. It will be intersting to see how this developed in the knock-out stage. 
 
 
 ###R code to replicate results and graphs
