--- a/content/blog/2018-06-18-kelly-criterion.Rmd
+++ b/content/blog/2018-06-18-kelly-criterion.Rmd
@@ -10,7 +10,7 @@ categories: statistics
 
 I enjoyed looking at the probabilistic model of world cup matches over at [fivethirtyeight](https://projects.fivethirtyeight.com/2018-world-cup-predictions/matches/) and was wondering how one would fare in terms of sports betting using the predictions from Nate Silver and Jay Boice. As a disclaimer: I did not bet any money at all, all of the below is purely theoretical.
 
-So here is what I did: for each game, I pulled the winning probabilities from fivethirtyeight and the corresponding odds from online bookmakers. Since bookmakers constantly update their odds (in order to have an edge over bettors), I always pulled both probabilities and odds the night before the match. With that in hand, I simulated three different betting stratgies. First, a bettor who always chooses the favorite to win, and always bets exactly \$10. The second strategy is a contrarian bettor who always chooses the least likely outcome, which typically means betting on the underdog, but with high odds, and always uses a \$10 bet. Lastly, I will simulate a bettor that looks at all probabilties, and odds, and then uses the [Kelly criterion](https://en.wikipedia.org/wiki/Kelly_criterion) for each bet. All bettors start out with the same bankroll of \$100.
+So here is what I did: for each game, I pulled the winning probabilities from fivethirtyeight and the corresponding odds from online bookmakers. Since bookmakers constantly update their odds (in order to have an edge over bettors), I always pulled both probabilities and odds the night before the match. With that in hand, I simulated three different betting stratgies. First, a bettor who always chooses the favorite to win. The second strategy is a contrarian bettor who always chooses the least likely outcome, which typically means betting on the underdog, but with high odds. Both ot these strategies never adjust the size of their stake, and always bet 10% of their intial bankroll (not their current bankroll). Lastly, I will simulate a bettor that looks at all probabilties, and odds, and then uses the [Kelly criterion](https://en.wikipedia.org/wiki/Kelly_criterion) for each bet. All bettors start out with the same bankroll of \$100.
 
 The Kelly criterion is a method to determine how much one should wager on a bet, given assumed winning probabilities, and offered odds. Kelly betting maximizes logarithmic utility. Below is a graphic display showing the Kelly criterion. On the x-axis are the probabilities that you assume an event is going to take place, and on the y-axis are the offered odds (these odds can be translated into implied probabilities of the bookie). The shading for each part of the graph shows what percentage of your current bankroll you should bet. As an example, if you believe the probability of an event to happen is close to 100% (right side of the graph), then you typically end up betting a lot (or all) of your bankroll (the yellow region of the graph). For events in which the implied probabilities of the bookie are larger than your own, you end up not betting at all - notice that this area is quite large in the graph. 
 
